--- a/src/styles/components/Navigation.scss
+++ b/src/styles/components/Navigation.scss
@@ -1,5 +1,5 @@
 // Header
-@import "../variables.scss";
+@import '../variables.scss';
 
 .header {
   position: fixed;
@@ -30,7 +30,7 @@
     position: relative;
 
     &::after {
-      content: "";
+      content: '';
       position: absolute;
       bottom: -5px;
       left: 0;
