--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -36,7 +36,7 @@ body {
   display: inline-block;
 
   &::after {
-    content: "";
+    content: '';
     position: absolute;
     bottom: -10px;
     left: 0;
@@ -44,6 +44,16 @@ body {
     height: 3px;
     background: $color-accent;
   }
+}
+
+// Loading
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  color: $color-accent;
+  font-size: 1.5rem;
 }
 
 // Responsive
