--- a/src/styles/components/Hero.scss
+++ b/src/styles/components/Hero.scss
@@ -47,6 +47,10 @@
 
 // Responsive
 @media (max-width: 768px) {
+  .hero {
+    padding-top: 4rem;
+  }
+
   .cta-buttons {
     flex-direction: column;
     align-items: center;
